# GOAL

./: .gitattributes  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: code-quality-main.yaml  code-quality-pr.yaml  release-drafter.yml  test.yml
configs/: eval.yaml  train.yaml
configs/callbacks/: backbone_finetuning.yaml  default.yaml  ema_weight_averaging.yaml  grad_accumulation.yaml  model_checkpoint.yaml  swa.yaml  throughput_monitor.yaml
configs/data/: ani1.yaml  ani1x.yaml  hdf5.yaml  lmdb.yaml  md17_aspirin.yaml  md17_ethanol.yaml  qm9.yaml  rmd17_aspirin.yaml  trajectory.yaml  xyz.yaml
configs/hparams_search/: basic.yaml  ray_tune.yaml  wandb_sweep.yaml
configs/hydra/: default.yaml
configs/logger/: aim.yaml  comet.yaml  csv.yaml  mlflow.yaml  neptune.yaml  tensorboard.yaml  wandb.yaml
configs/model/: deepset.yaml  hyperset.yaml  hyperspec.yaml  invariant_gnn.yaml  invariant_gnn_qm9.yaml  lucidset.yaml  monolithic_example.yaml
configs/strategy/: ddp.yaml  deepspeed_zero1.yaml  deepspeed_zero2.yaml  deepspeed_zero3.yaml  deepspeed_zero3_offload.yaml  fsdp.yaml  fsdp2.yaml
configs/trainer/: ddp.yaml  default.yaml  fsdp.yaml  fsdp2.yaml  gpu.yaml  model_parallel.yaml
configs/training/: default.yaml  qm9_multi.yaml
examples/datasets/: README.md  __init__.py  ani1.py  base.py  md17.py  qm9.py  spice.py
notebooks/: diatomic_pair_mlp_tutorial.ipynb  feature_extraction_demo.ipynb  getting_started.ipynb  mini_trainer_demo.ipynb
scripts/: slurm_train.sh
src/: eval.py  train.py
src/gmd/: __init__.py  registry.py
src/gmd/adapters/: __init__.py  base.py  fairchem.py  mace.py
src/gmd/cli/: __init__.py  evaluate.py  finetune.py  train.py  tune.py
src/gmd/data/: __init__.py  datamodule.py  graph.py  transforms.py
src/gmd/data/datasets/: __init__.py  base.py  concat.py  hdf5.py  lmdb.py  trajectory.py  xyz.py
src/gmd/nn/blocks/: __init__.py  interaction.py  readout.py
src/gmd/nn/heads/: __init__.py  base.py  dipole.py  direct_forces.py  energy.py  energy_forces.py  stress.py
src/gmd/nn/models/: __init__.py  base.py  hyperspec.py  invariant.py
src/gmd/nn/primitives/: radial.py  tp.py
src/gmd/training/: __init__.py  ema.py  loss.py  module.py  tuning.py
src/gmd/training/callbacks/: __init__.py  checkpoint.py
src/gmd/training/strategies/: __init__.py  ddp.py  deepspeed.py  factory.py  fsdp.py
src/gmd/utils/: __init__.py  calculator.py  extraction.py
src/goal/: __init__.py
src/goal/ml/: __init__.py  registry.py
src/goal/ml/adapters/: __init__.py  base.py  fairchem.py  mace.py
src/goal/ml/cli/: __init__.py  evaluate.py  finetune.py  train.py  tune.py
src/goal/ml/data/: __init__.py  datamodule.py  graph.py  neighbor_list.py  transforms.py
src/goal/ml/data/datasets/: __init__.py  base.py  concat.py  hdf5.py  lmdb.py  trajectory.py  xyz.py
src/goal/ml/nn/: __init__.py
src/goal/ml/nn/blocks/: embedding.py  interaction.py  readout.py
src/goal/ml/nn/heads/: __init__.py  base.py  dipole.py  direct_forces.py  energy.py  energy_forces.py  multi.py  scalar.py  stress.py
src/goal/ml/nn/models/: __init__.py  base.py  deepset.py  hyperset.py  hyperspec.py  invariant.py  lucidset.py  monolithic_example.py
src/goal/ml/nn/primitives/: __init__.py  linear.py  norm.py  radial.py  tp.py
src/goal/ml/training/: __init__.py  ema.py  loss.py  module.py  tuning.py
src/goal/ml/training/callbacks/: __init__.py  checkpoint.py  logging.py
src/goal/ml/training/strategies/: __init__.py  ddp.py  deepspeed.py  factory.py  fsdp.py
src/goal/ml/utils/: __init__.py  calculator.py  extraction.py  fabric_trainer.py  mini_trainer.py
src/utils/: instantiators.py  logging_utils.py  rich_utils.py  utils.py
tests/: conftest.py  test_data.py  test_example_datasets.py  test_extraction.py  test_graph.py  test_registry.py  test_strategies.py  test_training.py
tests/helpers/: package_available.py  run_if.py
